// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Package transformer for jsdocs should work with an empty package.json 1`] = `
{
  "devDependencies": {
    "jsarch": "^6.0.0",
  },
  "greenkeeper": {
    "ignore": [
      "jsarch",
    ],
  },
  "metapak": {
    "data": {
      "files": "yolo.js",
    },
  },
  "scripts": {
    "architecture": "jsarch yolo.js > ARCHITECTURE.md && git add ARCHITECTURE.md",
    "precz": "npm run architecture",
    "preversion": "npm run architecture",
  },
}
`;

exports[`Package transformer for jsdocs should work with child package 1`] = `
{
  "devDependencies": {
    "jsarch": "^6.0.0",
  },
  "greenkeeper": {
    "ignore": [],
  },
  "metapak": {
    "data": {
      "childPackage": true,
      "files": "yolo.js",
    },
  },
  "scripts": {
    "architecture": "jsarch yolo.js > ARCHITECTURE.md && git add ARCHITECTURE.md",
  },
}
`;

exports[`Package transformer for jsdocs should work with typescrit configs 1`] = `
{
  "devDependencies": {
    "jsarch": "^6.0.0",
  },
  "greenkeeper": {
    "ignore": [],
  },
  "jsarch": {
    "parserOptions": {
      "plugins": [
        "typescript",
      ],
    },
  },
  "metapak": {
    "configs": [
      "typescript",
    ],
    "data": {
      "childPackage": true,
      "files": "yolo.js",
    },
  },
  "scripts": {
    "architecture": "jsarch yolo.js > ARCHITECTURE.md && git add ARCHITECTURE.md",
  },
}
`;
